@@ -20,8 +20,10 @@ gcl (2.5.4-1) unstable; urgency=low
     defpackage ops at head of fasl vector, required for maxima build
   * Special symbol Dotnil has ordinary list Cnil for plist and hpack
   * Small fixes for profiling support
+  * Restore pp() function for debugging; print out undefined symbol
+    names
 
- -- Camm Maguire <camm@enhanced.com>  Mon,  4 Aug 2003 23:39:07 +0000
+ -- Camm Maguire <camm@enhanced.com>  Wed,  6 Aug 2003 17:01:26 +0000
 
 gcl (2.5.3-2) unstable; urgency=low
 
